[package]
name = "shaloop"
version = "0.2.1-alpha.8"
authors = ["Pierre Tholoniat <pierre@tholoniat.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/LaRiffle/shaloop"
homepage = "https://github.com/LaRiffle/shaloop"
readme = "README.md"

[dependencies]
sha2 = "0.9.1"
maturin = "0.8.2"

[lib]
name = "shaloop"
crate-type = ["cdylib"]

[package.metadata.maturin]
maintainer = "Pierre Tholoniat"
maintainer-email = "pierre@tholoniat.com"
requires-dist = ["numpy>=1", "cffi>=1", "pycparser>=2"]
requires-python=">=3.6"

